v2.3.3 (8 July 2018)
- added system rules update feature
- fixed fullscreen apps showstopper (issue #209)
- fixed possible crash for device path resolution
- fixed skipuac warnings for some machines
- fixed some services path resolution
- fixed saving empty rules config
- fixed update engine (issue #182)
- updated system rules

v2.3.2 (27 Juny 2018)
- added sorting by state for user rules in app context menu
- increased priority for blocking user rules
- fixed loading on startup (issue #75)
- fixed editor apps list sorting
- fixed service names displaying

v2.3.1 (25 Juny 2018)
- fixed loopback rules (added more reserved ip addresses)
- fixed sometimes system cannot be going to sleep
- fixed applying rules for services (appcrash)
- fixed update sometimes cannot be installed
- fixed services enumeration
- fixed system rules

v2.3 (19 Juny 2018)
- added allowed connections monitoring in dropped packets log (win8+)
- added inbound multicast and broadcast connections logging (win8+)
- added outbound redirection filter layer (win7+)
- added separation for remote/local address/port in rules editor
- added hotkeys for import/export profile
- added win10 rs5 support
- prevent memory overflow for singly linked lists (win7+) (issue #193)
- do not load icons for processes if icons displaying are disabled
- improved multiple rules applying speed in settings window
- increased time limit for displaying same notification (win7+)
- search loading dlls in system directories only (safety)
- check for correct xml data type before loading
- store last notification timestamp for apps
- removed proxy support (win8+)
- fixed dropped events callback crash (win7+)
- fixed applying services filters
- fixed alphanumeric sorting
- improved port scanning defense
- improved loopback connections
- improved boot-time filters
- stability improvements
- cleanup xml atributes
- updated system rules
- cosmetics fixes
- fixed ui bugs
- fixed bugs

v2.2.12 (6 Juny 2018)
- added win10 rs4 support
